Update housing status route (#12)
